--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html> 
 
 <head>
+    <title>ic-04</title>
     <meta charset=utf-8/>
 </head>
 
 
 <body>
+    <h1>Intro to HTML and CSS </h1>
+    <h2>Felix Yang</h2>
 
+    <div id="div1" class="container">
+        <p id="p1" class="italic">My favorite visualization is a zoomable sunburst. </p>
+    </div>
+
+    <div id="div2" class="container">
+        <svg>
+            <rect width="200" height="50" fill="green">
+        </svg>
 
 </body>
 
