--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="div2" class="container">
         <svg>
-            <rect width="200" height="50" fill="green"/>
+            <rect width="200" height="50" />
         </svg>
     </div>
 
