--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="div2" class="container">
         <svg>
-            <rect width="400" height="200" style="fill:rgb(0,255,255);stroke-width:10;stroke:rgb(0,0,0)"/>
+            <rect width="400" height="200" style="fill:rgb(0,255,255)"/>
         </svg>
     </div>
 
